--- a/index.htm/my-profolio.htm
+++ b/index.htm/my-profolio.htm
@@ -554,7 +554,7 @@
 
             <div class="cta-buttons">
                 <a href="#projects" class="btn btn-primary">View Projects</a>
-                <a href="pdf\cv.pdf" class="btn btn-secondary" download="Rakib_CV.pdf">Viwe Resume</a>
+                <a href="../pdf\cv.pdf" class="btn btn-secondary" download="Rakib_CV.pdf">Viwe Resume</a>
 
             </div>
         </div>
@@ -656,7 +656,7 @@
                 <a href="https://maazrokib.github.io/Update-k.app/home" target="_blank" class="project-card-link">
                     <div class="project-card">
                         <div class="project-image">
-                            <img src="image/krishi.jpg" alt="Krishi Project Image"
+                            <img src="../image/krishi.jpg" alt="Krishi Project Image"
                                 style="width: 100%; height: 100%; border-radius: 8px; object-fit: cover;">
                         </div>
                         <div class="project-content">
@@ -679,7 +679,7 @@
                 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="image/to-let.jpeg" alt="To-Let Project Image" style="width: 100%; height: 100%; border-radius: 8px; object-fit: cover;" />
+                        <img src="../image/to-let.jpeg" alt="To-Let Project Image" style="width: 100%; height: 100%; border-radius: 8px; object-fit: cover;" />
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">To•Let – Smart Rental Platform</h3>
@@ -698,7 +698,7 @@
                 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="image/july36.jpg" alt="July36 Project Image" style="width: 100%; height: 100%; border-radius: 8px; object-fit: cover;" />
+                        <img src="../image/july36.jpg" alt="July36 Project Image" style="width: 100%; height: 100%; border-radius: 8px; object-fit: cover;" />
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">July36 – স্মৃতি চিহ্নে july আন্দোলন</h3>
@@ -724,7 +724,7 @@
         <h2 class="section-title">About Me</h2>
         <div class="about-content">
             <div class="about-image">
-                <img src="image/h.jpg" alt="Profile Image" style="width: 100%; height: 100%; border-radius: 50%;">
+                <img src="../image/h.jpg" alt="Profile Image" style="width: 100%; height: 100%; border-radius: 50%;">
             </div>
             <div class="about-text">
                 <p>
