--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
             </p>
             <div class="cta-buttons">
                 <a href="#projects" class="btn btn-primary">View Projects</a>
-                <a href="../pdf/cv.pdf" class="btn btn-secondary" download="Rakib_CV.pdf">View Resume</a>
+                <a href="pdf/cv.pdf" class="btn btn-secondary" download="Rakib_CV.pdf">View Resume</a>
             </div>
         </div>
     </section>
@@ -614,7 +614,7 @@
                 </a>
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="../image/to-let.jpeg" alt="To-Let Project Image"
+                        <img src="image/to-let.jpeg" alt="To-Let Project Image"
                             style="width: 100%; height: 100%; border-radius: 8px; object-fit: cover;" />
                     </div>
                     <div class="project-content">
@@ -635,7 +635,7 @@
                 </div>
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="../image/july36.jpg" alt="July36 Project Image"
+                        <img src="image/july36.jpg" alt="July36 Project Image"
                             style="width: 100%; height: 100%; border-radius: 8px; object-fit: cover;" />
                     </div>
                     <div class="project-content">
@@ -662,7 +662,7 @@
         <h2 class="section-title">About Me</h2>
         <div class="about-content">
             <div class="about-image">
-                <img src="../image/h.jpg" alt="Profile Image of Md Rakib Hosen"
+                <img src="image/h.jpg" alt="Profile Image of Md Rakib Hosen"
                     style="width: 100%; height: 100%; border-radius: 50%;">
             </div>
             <div class="about-text">
