--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
                 <a href="https://maazrokib.github.io/Update-k.app/home" target="_blank" class="project-card-link">
                     <div class="project-card">
                         <div class="project-image">
-                            <img src="../image/krishi.jpg" alt="KrishiConnect Project Image"
+                            <img src="image/krishi.jpg" alt="KrishiConnect Project Image"
                                 style="width: 100%; height: 100%; border-radius: 8px; object-fit: cover;">
                         </div>
                         <div class="project-content">
